[package]
name = "rockflasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "unicode"] }
parse-size = "1.0.0"
log = "0.4.20"
gpt = "3.1.0"
block-utils = "0.11.1"
spinner = "0.5.0"
sizes = "0.1.3"
uuid = { version = "1.4.1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.148"
